# vs-nntraining

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml
vsnntraining/: __init__.py  _metadata.py  export.py  types.py  util.py
vsnntraining/lq/: __init__.py  compression.py  deinterlacing.py  lowpass.py  sharpening.py
